--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,9 @@
+html, body, #root {
+  height: 100%;
+}
+
 #root {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 98vh;
-  background: linear-gradient(45deg,rgba(0, 29, 250, 0.69) 0%, rgba(41, 199, 20, 0.84) 50%, rgba(252, 252, 252, 0.89) 100%);
+  background: linear-gradient(45deg, rgb(0, 140, 255) 0%, rgb(72, 255, 0.5) 70%, rgba(252, 252, 252, 1) 100%);
   color: black;
 }
 
@@ -21,4 +20,32 @@ div:focus {
   margin-top: 1rem;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 8px;
+  font-size: small;
+}
+
+button {
+  border-radius: 15px;
+  background-color: white;
+}
+
+input {
+  border-radius: 10px;
+}
+
+.btn-emoji {
+  background: transparent;
+  border: 0;
+  padding: 0;
+  font-size: 1.8rem;
+  cursor: pointer;
+  line-height: 1;;
+}
+
+.btn-action-sm {
+  height: 20px;
+  padding: 0 0.5rem;
+  font-size: 0.75rem;
+
+  display: inline-flex;
+  align-items: center;
 }
